NEON-1809 Added an unshared filter to the aggregation table to let users set a filter for a specific aggregation table instead of the whole dashboard..

--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -1,5 +1,5 @@
 <div class="header-container" ng-show="!(hideHeader)">
-    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + (options.field.prettyName ? ' / ' + options.field.prettyName : '')"></div>
+    <div class="title header-text pull-left" ng-bind="generateTitle()"></div>
 
     <options-menu parent-element="element" export-function="makeCountByExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
@@ -15,15 +15,15 @@
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
-            <label>Aggregation Field</label>
-            <select class="form-control" ng-model="options.field" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeField()">
+            <label>Data Field</label>
+            <select class="form-control" ng-model="options.field" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangedDataField()">
                 <option disabled selected value="">Please choose a field</option>
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Aggregation</label>
-            <select class="form-control" ng-model="options.aggregation" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregation()">
+            <select class="form-control" ng-model="options.aggregation" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangedAggregation()">
                 <option value="count">Count</option>
                 <option value="min">Minimum</option>
                 <option value="max">Maximum</option>
@@ -31,9 +31,28 @@
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions) && (options.aggregation !== 'count')">
-            <label>Value Field (Y Axis)</label>
-            <select class="form-control" ng-model="options.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeAggregationField()">
+            <label>Aggregation Field</label>
+            <select class="form-control" ng-model="options.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangedAggregationField()">
             </select>
+        </div>
+
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Unshared Filter</label>
+            <select class="form-control" ng-model="options.filterField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangedUnsharedFilterField()">
+                <option selected value="">None</option>
+            </select>
+
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="{{'Filter for ' + options.filterField.prettyName + '...'}}" ng-model="options.filterValue" ng-disabled="!(options.filterField.columnName)">
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default refresh" title="Remove Unshared Filter" ng-click="handleRemovedUnsharedFilter()">
+                        <span class="glyphicon glyphicon-remove"></span>
+                    </button>
+                    <button type="button" class="btn btn-default refresh" title="Set Unshared Filter" ng-click="handleChangedUnsharedFilterValue()">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
+                </div>
+            </div>
         </div>
 
         <div class="form-group">
@@ -41,7 +60,7 @@
             <div class="input-group">
                 <input type="number" min="1" class="form-control" ng-model="options.limitCount" required>
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleChangeLimit()">
+                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleChangedLimit()">
                         <span class="glyphicon glyphicon-refresh"></span>
                     </button>
                 </div>
