--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -37,7 +37,7 @@
 
 <div class="header-container filter-container">
     <div class="header-item filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
-        <links-popup-button key="{{filterSet.value}}" source="{{visualizationId}}" tooltip="{{filterSet.value}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
+        <links-popup-button key="{{generateLinksPopupKey(filterSet.value)}}" source="{{visualizationId}}" tooltip="{{filterSet.value}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
         <span class="filter-label" ng-class="{true: '', false: 'border-left'}[linksPopupButtonIsDisabled]" ng-bind="filterSet.value"></span>
         <span class="border-left glyphicon glyphicon-remove" ng-click="clearFilterSet()"></span>
     </div>
