--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -65,7 +65,7 @@
 <div class="header-container filter-container" ng-show="(filterTags.length > 0)">
     <div class="header-item filter-reset pull-right" ng-repeat="tag in filterTags"
         title="{{options.tagField.prettyName}}={{options.showTranslation ? tag.nameTranslated : tag.name}}">
-        <links-popup-button key="{{tag.name}}" source="{{visualizationId}}" tooltip="{{tag.name}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
+        <links-popup-button key="{{generateLinksPopupKey(tag.name)}}" source="{{visualizationId}}" tooltip="{{tag.name}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
         <span class="filter-label" ng-class="{true: '', false: 'border-left'}[linksPopupButtonIsDisabled]" ng-bind="tag.name" ng-show="!options.showTranslation"></span>
         <span class="filter-label" ng-class="{true: '', false: 'border-left'}[linksPopupButtonIsDisabled]" ng-bind="tag.nameTranslated" ng-show="options.showTranslation"></span>
         <span class="border-left glyphicon glyphicon-remove" ng-click="removeFilter(tag.name)"></span>
