NEON-1690 Fixing tooltips

--- a/app/css/variables-dark-purple.less
+++ b/app/css/variables-dark-purple.less
@@ -69,9 +69,8 @@
 @mobile-widget-height: 400px;
 @mobile-widget-width: 100%;
 
-
-@tooltip-background: rgba(255,255,255,0.9);
-@dark-tooltip-background: rgba(100,100,100,0.8);
+@tooltip-background: @visualization-box-background;
+@tooltip-text-color: @main-text-color;
 
 // Background colors to go behind map panes.
 @light-map-background: #CDD2D4;
