--- a/app/css/app.less
+++ b/app/css/app.less
@@ -258,6 +258,85 @@
     }
 }
 
+#tooltip-container {
+    display: none;
+    position: absolute;
+    padding: 12px 15px;
+    color: @tooltip-text-color;
+    font-size: 12px;
+    background-color: @tooltip-background;
+    border: @shadow-border;
+    border-radius: @border-radius;
+    pointer-events: none;
+    z-index: 10000;
+
+    span{
+        font-weight: bold;
+        color: @accent-bright;
+        display: block;
+        text-shadow: 0 2px 0 @text-shadow-color;
+    }
+
+    .tooltip-date {
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-bottom: 5px;
+        font-size: 12px;
+        color: @mid-text-color;
+    }
+
+    &:before {
+        content: '';
+        display: block;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-top: 8px solid transparent;
+        border-bottom: 8px solid transparent;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    &:after {
+        content: '';
+        display: block;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-top: 7px solid transparent;
+        border-bottom: 7px solid transparent;
+        top: 49%;
+        transform: translateY(-49%);
+    }
+
+    &.east {
+
+        &:before {
+            border-right: 8px solid @shadow;
+            left:-8px;
+            opacity: .5;
+        }
+
+        &:after {
+            border-right: 7px solid @tooltip-background;
+            left: -6px;
+        }
+    }
+
+    &.west {
+
+        &:before {
+            border-left:8px solid @shadow;
+            left: 100%;
+        }
+
+        &:after {
+            border-left: 7px solid @tooltip-background;
+            left: 100%;
+        }
+    }
+}
+
 @import 'errorStyle.less';
 @import 'fonts.less';
 @import 'popupStyle.less';
