--- a/app/css/variables-light-green.less
+++ b/app/css/variables-light-green.less
@@ -66,7 +66,7 @@
 @mobile-widget-width: 100%;
 
 @tooltip-background: rgba(255,255,255,0.9);
-@dark-tooltip-background: rgba(100,100,100,0.8);
+@tooltip-text-color: @main-text-color;
 
 // Background colors to go behind map panes.
 @light-map-background: #CDD2D4;
