NEON-1690 tooltip shadows

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -274,7 +274,7 @@
         font-weight: bold;
         color: @accent-bright;
         display: block;
-        text-shadow: 0 2px 0 @text-shadow-color;
+        text-shadow: @text-shadow;
     }
 
     .tooltip-date {
