--- a/app/css/variables-light-green.less
+++ b/app/css/variables-light-green.less
@@ -39,6 +39,7 @@
 @border-radius: 4px;
 @shadow: rgba(0, 0, 0, 0.2);
 @text-shadow-color: #FFFFFF;
+@text-shadow: 0 2px 0 @text-shadow-color;
 @main-border: 1px solid @border-color;
 @visualization-border: 0px solid @border-color;
 @visualization-border-radius: @border-radius;
