--- a/app/css/variables-dark-green.less
+++ b/app/css/variables-dark-green.less
@@ -39,6 +39,7 @@
 @border-radius: 2px;
 @shadow: ;
 @text-shadow-color: #FFFFFF;
+@text-shadow: none;
 @main-border: 1px solid @border-color;
 @visualization-border: 0px solid @border-color;
 @visualization-border-radius: @border-radius;
