NEON-1775 Improved the headers for the links in the links popup (they are now displayed as tables).

--- a/app/css/popupStyle.less
+++ b/app/css/popupStyle.less
@@ -22,6 +22,16 @@
         font-size: 16px;
         margin-left: 20px;
 
+        table {
+            td {
+                padding-right: 10px;
+            }
+        }
+
+        &.label-block {
+            display: block;
+        }
+
         &.label-small {
             font-size: 13px;
         }
