--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -2,6 +2,10 @@
     <div class="title header-text pull-left" ng-bind="generateTitle()"></div>
 
     <options-menu parent-element="element" export-function="makeTagCloudExportObject"  button-text="'No tag data'" show-button-text="showOptionsMenuButtonText">
+        <translation-options ng-show="translationAvailable" on-translate="updateTranslation" from-language-change="onFromLanguageChange" to-language-change="onToLanguageChange"
+            from-language-options="translationLanguages.fromLanguageOptions" to-language-options="translationLanguages.toLanguageOptions">
+        </translation-options>
+
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Database</label>
             <select class="form-control" ng-model="options.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
@@ -40,7 +44,7 @@
         </div>
 
         <div class="form-group">
-            <label>Show records with</label>
+            <label>Show Records with</label>
             <div class="btn-group">
                 <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.andTags]" ng-disabled="(filterTags.length <= 1)">
                     <input type="radio" ng-model="options.andTags" style="display:none" ng-value="true">
@@ -53,10 +57,6 @@
             </div>
             <div class="clearfix"></div>
         </div>
-
-        <translation-options ng-show="translationAvailable" on-translate="updateTranslation" from-language-change="onFromLanguageChange" to-language-change="onToLanguageChange"
-            from-language-options="translationLanguages.fromLanguageOptions" to-language-options="translationLanguages.toLanguageOptions">
-        </translation-options>
     </options-menu>
 </div>
 
