NEON-1828 Browser performance improvements to reduce the number of files that must be downloaded on initial page load:  grunt now concatenates all javascript files into a single javascript file (including most javascript libraries); less now adds css libraries to the single application css file; the build now creates a spritesheet containing all images used in the application.  All of the files are saved to app/build and replace the dependencies in index.html.  Also changed the styling for images in the popups.

--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -45,7 +45,7 @@
             background-color: #ffff66;
         }
 
-        img {
+        .neon-sprite {
             margin-right: 5px;
         }
 
