--- a/app/css/style.less
+++ b/app/css/style.less
@@ -759,7 +759,7 @@ tr.borderedRow {
             display: none;
         }
 
-        img{
+        .neon-sprite {
             margin-left: 5px;
             margin-right: 5px;
         }
@@ -1084,4 +1084,9 @@ tr.borderedRow {
 
 select[multiple] {
     width: auto;
+}
+
+.neon-sprite {
+    display: inline-block;
+    vertical-align: middle;
 }
