--- a/app/css/popupStyle.less
+++ b/app/css/popupStyle.less
@@ -18,6 +18,10 @@
 }
 
 .neon-popup {
+    .modal-body {
+        padding: 10px;
+    }
+
     label {
         font-size: 16px;
         margin-left: 20px;
@@ -39,7 +43,7 @@
 
     ul {
         list-style: none;
-        margin-left: 15px;
+        margin-left: 10px;
         padding: 0px;
 
         a, button {
@@ -48,7 +52,7 @@
             border: 1px solid @light-background;
             border-radius: 10px;
             height: 100%;
-            padding: 5px;
+            padding: 4px;
 
             &:focus, &:hover {
                 border: 1px solid @accent-light;
@@ -62,12 +66,19 @@
         span {
             color: @main-text-color;
             display: inline-block;
+            font-size: 12px;
             font-weight: bold;
             letter-spacing: 0.05em;
             overflow-y: hidden;
             text-align: center;
+            /* Supports three lines of text. */
             height: 55px;
             width: 110px;
+
+            &.short {
+                /* Supports two lines of text. */
+                height: 35px;
+            }
         }
 
         .neon-popup-thumbnail {
@@ -75,7 +86,7 @@
         }
 
         .selected {
-            button {
+            a, button {
                 background: @accent-bright;
                 border: 1px solid @accent-bright;
             }
@@ -89,23 +100,28 @@
             display: block;
             float:left;
             margin: 5px;
-            height: 150px;
-            width: 120px;
+            height: 130px;
+            width: 130px;
 
             img {
-               border: 0px;
-               height: 64px;
-               width: 64px;
-               margin-top: 8px;
-               margin-bottom: 8px;
+               height: 56px;
+               width: 56px;
+               border-radius: 4px;
+               margin-top: 4px;
+               margin-bottom: 4px;
+               padding: 4px;
+               background-color: #ffffff;
             }
 
-            &.short {
-                height: 130px;
-
-                span {
-                    height: 35px;
-                }
+            /* Bigger than img; use 'short' text spans. */
+            .neon-sprite-container {
+               height: 72px;
+               width: 72px;
+               border-radius: 4px;
+               margin-top: 4px;
+               margin-bottom: 4px;
+               padding: 4px;
+               background-color: #ffffff;
             }
         }
     }
@@ -132,7 +148,7 @@
     }
 
     .modal-body {
-        max-height: 510px;
+        max-height: 580px;
         overflow-y: auto;
     }
 }
