--- a/app/partials/directives/addVisualization.html
+++ b/app/partials/directives/addVisualization.html
@@ -16,16 +16,13 @@
             </div>
             <div class="modal-body">
                 <ul>
-                    <li class="short" ng-repeat="item in visualizations" 
-                        ng-init="item.selected = false" 
-                        ng-class="(item.selected) ? 'selected' : ''">
+                    <li ng-repeat="item in visualizations" ng-init="item.selected = false" ng-class="(item.selected) ? 'selected' : ''">
                         <div class="neon-popup-thumbnail center-block text-center">
-                            <button  ng-click="onItemSelected(item)" 
-                                tabindex="0">
-                                <img ng-src="{{(item.icon) ? item.icon : ''}}" 
-                                    alt="{{(item.name) ? item.name : ''}}" 
-                                    class="img-thumbnail center-block">
-                                <span class="text-uppercase small" ng-bind="item.name"></span>
+                            <button  ng-click="onItemSelected(item)" tabindex="0">
+                                <div class="neon-sprite-container center-block">
+                                    <div class="icon-{{item.icon}} neon-sprite" alt="{{item.name}}"></div>
+                                </div>
+                                <span class="text-uppercase short" ng-bind="item.name"></span>
                             </button>
                         </div>
                     </li>
