Adding back in and repairing options menu controls

--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -17,142 +17,150 @@
     margin: 0px;
     height: 100%;
     width: 100%;
-}
 
-.query-results-grid {
-    background-color: @main-background;
-    border: @border;
-    border-radius: 2px;
-    box-shadow: 0 1px 4px @shadow;
-    box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
+    .results-table {
+        height: 100%;
 
-    &:before, &:after {
-        box-sizing: content-box;
-        -webkit-box-sizing: content-box;
-        -moz-box-sizing: content-box;
-    }
-
-    *, *:before, *:after {
-        box-sizing: content-box;
-        -webkit-box-sizing: content-box;
-        -moz-box-sizing: content-box;
-    }
-
-    .form-inline {
-        .form-group {
-            &:first-child {
-                > label {
-                    margin-left: 0px;
-                }
-            }
-
-            > label {
-                margin-left: 10px;
-                margin-right: 5px;
-            }
-
-            input[type="number"] {
-                width: 100px;
-            }
-
-            .btn-group {
-                label {
-                    &.btn {
-                        margin-right: 0px;
-                    }
-                }
-            }
-        }
-
-        .form-input-group {
-            display: inline-block;
-            margin-bottom: 0;
-            vertical-align: middle;
-
-            &:first-child {
-                > label {
-                    margin-left: 0px;
-                }
-            }
-
-            > label {
-                margin-left: 10px;
-                margin-right: 5px;
-                float: left;
-                margin-top: 9px;
-                margin-right: 10px;
-            }
-        }
-    }
-
-    .slick-row{
-        background: @main-background-lighten;
-
-        &.odd {
-            background: @main-background;
-        }
-
-        &.selectable {
-            .slick-cell {
-                cursor: pointer;
-            }
-        }
-    }
-
-    .slick-header{
-        border-top: 0;
-
-        .slick-header-column{
-            color: @mid-text-color;
-            background: @main-background-darken;
-            cursor: pointer;
-
-            &.ui-state-hover{
-                color: @accent-bright;
-                background: @light-background;
-
-                .remove-column-button {
-                    color: #999999;
-                    background: #FFFFFF;
-
-                    &:focus, &:hover {
-                        color: #39B54A;
-                        background: #FFFFFF;
-                    }
-                }
-            }
-
-            .remove-column-button {
-                color: #999999;
-                position: absolute;
-                right: 5px;
-            }
-        }
-
-        .slick-header-column-sorted{
-            color: @accent-bright;
-            font-style: normal;
-        }
-
-        .slick-sortable-placeholder{
-            background: @border-color;
-        }
+        //This makes the autosizing work while taking into account the options menu.
+        padding-top: 40px;
+        margin-top: -40px;
     }
 }
 
-.query-results-grid.row-selected {
-    .slick-row{
-        &.active {
-            background: @accent-dulled;
-        }
-    }
-}
+// .query-results-grid {
+//     background-color: @main-background;
+//     border: @border;
+//     border-radius: 2px;
+//     box-shadow: 0 1px 4px @shadow;
+//     box-sizing: content-box;
+//     -webkit-box-sizing: content-box;
+//     -moz-box-sizing: content-box;
 
-.slick-sort-indicator {
-    float: none;
-}
+//     &:before, &:after {
+//         box-sizing: content-box;
+//         -webkit-box-sizing: content-box;
+//         -moz-box-sizing: content-box;
+//     }
+
+//     *, *:before, *:after {
+//         box-sizing: content-box;
+//         -webkit-box-sizing: content-box;
+//         -moz-box-sizing: content-box;
+//     }
+
+//     .form-inline {
+//         .form-group {
+//             &:first-child {
+//                 > label {
+//                     margin-left: 0px;
+//                 }
+//             }
+
+//             > label {
+//                 margin-left: 10px;
+//                 margin-right: 5px;
+//             }
+
+//             input[type="number"] {
+//                 width: 100px;
+//             }
+
+//             .btn-group {
+//                 label {
+//                     &.btn {
+//                         margin-right: 0px;
+//                     }
+//                 }
+//             }
+//         }
+
+//         .form-input-group {
+//             display: inline-block;
+//             margin-bottom: 0;
+//             vertical-align: middle;
+
+//             &:first-child {
+//                 > label {
+//                     margin-left: 0px;
+//                 }
+//             }
+
+//             > label {
+//                 margin-left: 10px;
+//                 margin-right: 5px;
+//                 float: left;
+//                 margin-top: 9px;
+//                 margin-right: 10px;
+//             }
+//         }
+//     }
+
+//     .slick-row{
+//         background: @main-background-lighten;
+
+//         &.odd {
+//             background: @main-background;
+//         }
+
+//         &.selectable {
+//             .slick-cell {
+//                 cursor: pointer;
+//             }
+//         }
+//     }
+
+//     .slick-header{
+//         border-top: 0;
+
+//         .slick-header-column{
+//             color: @mid-text-color;
+//             background: @main-background-darken;
+//             cursor: pointer;
+
+//             &.ui-state-hover{
+//                 color: @accent-bright;
+//                 background: @light-background;
+
+//                 .remove-column-button {
+//                     color: #999999;
+//                     background: #FFFFFF;
+
+//                     &:focus, &:hover {
+//                         color: #39B54A;
+//                         background: #FFFFFF;
+//                     }
+//                 }
+//             }
+
+//             .remove-column-button {
+//                 color: #999999;
+//                 position: absolute;
+//                 right: 5px;
+//             }
+//         }
+
+//         .slick-header-column-sorted{
+//             color: @accent-bright;
+//             font-style: normal;
+//         }
+
+//         .slick-sortable-placeholder{
+//             background: @border-color;
+//         }
+//     }
+// }
+
+// .query-results-grid.row-selected {
+//     .slick-row{
+//         &.active {
+//             background: @accent-dulled;
+//         }
+//     }
+// }
+
+// .slick-sort-indicator {
+//     float: none;
+// }
 
 .visualization-widget {
     .query-results-directive {
