--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -1,70 +1,59 @@
-<div class="header-container" ng-show="!(hideHeader)">
-    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName"></div>
+<div class="header">
+    <div class="pull-left header-container filter-container">
+        <h4>Showing
+            <span class="count text-primary" ng-bind="active.count | number"></span> of
+            <span ng-bind="active.totalRows | number"></span>
+        </h4>
+    </div>
+    <div class="header-container" ng-show="!(hideHeader)">
+        <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName"></div>
 
-    <options-menu parent-element="element" export-function="makeQueryResultsTableExportObject">
-        <div class="form-group" ng-show="!(hideAdvancedOptions)">
-            <label>Database</label>
-            <select class="form-control" ng-model="options.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
-            </select>
-        </div>
-        <div class="form-group" ng-show="!(hideAdvancedOptions)">
-            <label>Table</label>
-            <select class="form-control" ng-model="options.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label>Add Column</label>
-            <div class="input-group">
-                <select class="form-control" ng-model="options.addField" ng-disabled="!(deletedFieldsMap[options.database.name][options.table.name].length > 0)" ng-options="field.prettyName for field in deletedFieldsMap[options.database.name][options.table.name]">
+        <options-menu parent-element="element" export-function="makeQueryResultsTableExportObject">
+            <div class="form-group">
+                <button class="btn btn-default" ng-class="{active: gridOptions.showToolPanel}" ng-click="toggleToolbox()">Modify Table Rows</button>
+            </div>
+            <div class="form-group" ng-show="!(hideAdvancedOptions)">
+                <label>Database</label>
+                <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
                 </select>
-
-                <div class="input-group-btn">
-                    <button class="btn btn-default" ng-click="addColumn()" ng-disabled="!(deletedFieldsMap[options.database.name][options.table.name].length > 0)">&plus;</button>
-                </div>
             </div>
-        </div>    
-
-        <div class="form-group">
-            <label>Sort By</label>
-            <div class="input-group">
-                <select class="form-control" ng-model="options.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="refreshData()">
+            <div class="form-group" ng-show="!(hideAdvancedOptions)">
+                <label>Table</label>
+                <select class="form-control" ng-model="active.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
                 </select>
+            </div>
 
-                <div class="input-group-btn">
-                    <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[options.sortDirection === ASCENDING]">
-                        <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="ASCENDING" ng-change="handleAscButtonClick()">ASC
-                    </label>
-                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.sortDirection === DESCENDING]">
-                        <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="DESCENDING" ng-change="handleDescButtonClick()">DESC
-                    </label>
+            <div class="form-group">
+                <label>Sort By</label>
+                <div class="input-group">
+                    <select class="form-control" ng-model="active.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="refreshData()">
+                    </select>
+
+                    <div class="input-group-btn">
+                        <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[active.sortDirection === ASCENDING]">
+                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="ASCENDING" ng-change="sortAsc()">ASC
+                        </label>
+                        <label class="btn btn-default" ng-class="{true: 'active', false: ''}[active.sortDirection === DESCENDING]">
+                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="DESCENDING" ng-change="sortDesc()">DESC
+                        </label>
+                    </div>
                 </div>
             </div>
-        </div>    
 
-        <div class="form-group">
-            <label>Limit</label>
-            <div class="input-group">
-                <input type="number" min="1" class="form-control" ng-model="options.limit" required>
-                <div class="input-group-btn">
-                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="refreshData()">
-                        <span class="glyphicon glyphicon-refresh"></span>
-                    </button>
+            <div class="form-group">
+                <label>Limit</label>
+                <div class="input-group">
+                    <input type="number" min="1" class="form-control" ng-model="active.limit" required>
+                    <div class="input-group-btn">
+                        <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="refreshData()">
+                            <span class="glyphicon glyphicon-refresh"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </options-menu>
+        </options-menu>
+    </div>
+    <div class="clearfix"></div>
 </div>
+<div ag-grid="gridOptions" class="ag-dark results-table"></div>
 
-<div class="clearfix"></div>
-
-<div class="header-container filter-container">
-    <h4 class="pull-left">Showing 
-        <span class="count text-primary" ng-bind="tableOptions.data.length | number"></span> of 
-        <span ng-bind="totalRows | number"></span>
-    </h4>
-</div>
-
-<div class="clearfix"></div>
-
-<div class="query-results-grid"></div>
