--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -1,45 +1,48 @@
 <div class="header-container" ng-show="!(hideHeader)">
-    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + ' / ' + options.field.prettyName"></div>
+    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : active.table.prettyName + ' / ' + active.field.prettyName"></div>
+    <div class="pull-left header-text" style="padding-left: 20px;" ng-hide="showTooMuchDataError">
+        <span class="text-primary ng-binding" ng-bind="count | number"></span> values
+    </div>
 
     <options-menu parent-element="element" export-function="makeCountByExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Database</label>
-            <select class="form-control" ng-model="options.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
+            <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Table</label>
-            <select class="form-control" ng-model="options.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
+            <select class="form-control" ng-model="active.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Aggregation Field</label>
-            <select class="form-control" ng-model="options.field" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeField()">
+            <select class="form-control" ng-model="active.field" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeField()">
                 <option disabled selected value="">Please choose a field</option>
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Aggregation</label>
-            <select class="form-control" ng-model="options.aggregation" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregation()">
+            <select class="form-control" ng-model="active.aggregation" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregation()">
                 <option value="count">Count</option>
                 <option value="min">Minimum</option>
                 <option value="max">Maximum</option>
             </select>
         </div>
 
-        <div class="form-group" ng-show="!(hideAdvancedOptions) && (options.aggregation !== 'count')">
+        <div class="form-group" ng-show="!(hideAdvancedOptions) && (active.aggregation !== 'count')">
             <label>Value Field (Y Axis)</label>
-            <select class="form-control" ng-model="options.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeAggregationField()">
+            <select class="form-control" ng-model="active.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeAggregationField()">
             </select>
         </div>
 
         <div class="form-group">
             <label>Value Limit</label>
             <div class="input-group">
-                <input type="number" min="1" class="form-control" ng-model="options.limitCount" required>
+                <input type="number" min="1" class="form-control" ng-model="active.limitCount" required>
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleChangeLimit()">
                         <span class="glyphicon glyphicon-refresh"></span>
@@ -49,20 +52,19 @@
         </div>
     </options-menu>
 </div>
-
 <div class="clearfix"></div>
 
-<div class="header-container filter-container">
+<!-- <div class="header-container filter-container">
     <h4 class="pull-left" ng-if="showTooMuchDataError">The query exceeded the memory limit.  Please add a filter to requery.</h4>
-
-    <h4 class="pull-left" ng-hide="showTooMuchDataError"><span class="count text-primary ng-binding" ng-bind="count | number"></span> values</h4>
 
     <div class="header-item filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
         <span class="filter-label" ng-bind="filterSet.value"></span>
         <span class="glyphicon glyphicon-remove" ng-click="clearFilter()"></span>
     </div>
-</div>
-
+</div> -->
 <div class="clearfix"></div>
 
-<div class="count-by-grid" ng-hide="showTooMuchDataError"></div>
+<div ag-grid="gridOptions" class="ag-dark count-by-table"></div>
+
+<!--
+<div class="count-by-grid" ng-hide="showTooMuchDataError"></div> -->
