--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -1,17 +1,14 @@
 <div class="header">
-    <div class="pull-left header-container filter-container">
-        <h4>Showing
-            <span class="count text-primary" ng-bind="active.count | number"></span> of
-            <span ng-bind="active.totalRows | number"></span>
-        </h4>
-    </div>
     <div class="header-container" ng-show="!(hideHeader)">
-        <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName"></div>
+
+        <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : active.table.prettyName"></div>
+        <div class="pull-left header-text" style="padding-left: 20px;">
+            Showing
+            <span class="text-primary" ng-bind="active.count | number"></span> of
+            <span ng-bind="active.totalRows | number"></span>
+        </div>
 
         <options-menu parent-element="element" export-function="makeQueryResultsTableExportObject">
-            <div class="form-group">
-                <button class="btn btn-default" ng-class="{active: gridOptions.showToolPanel}" ng-click="toggleToolbox()">Modify Table Rows</button>
-            </div>
             <div class="form-group" ng-show="!(hideAdvancedOptions)">
                 <label>Database</label>
                 <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
@@ -26,15 +23,15 @@
             <div class="form-group">
                 <label>Sort By</label>
                 <div class="input-group">
-                    <select class="form-control" ng-model="active.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="refreshData()">
+                    <select class="form-control" ng-model="active.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="updateSort()">
                     </select>
 
                     <div class="input-group-btn">
                         <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[active.sortDirection === ASCENDING]">
-                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="ASCENDING" ng-change="sortAsc()">ASC
+                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="ASCENDING" ng-change="updateSort('asc')">ASC
                         </label>
                         <label class="btn btn-default" ng-class="{true: 'active', false: ''}[active.sortDirection === DESCENDING]">
-                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="DESCENDING" ng-change="sortDesc()">DESC
+                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="DESCENDING" ng-change="updateSort('desc')">DESC
                         </label>
                     </div>
                 </div>
@@ -45,15 +42,17 @@
                 <div class="input-group">
                     <input type="number" min="1" class="form-control" ng-model="active.limit" required>
                     <div class="input-group-btn">
-                        <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="refreshData()">
+                        <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="queryForData()">
                             <span class="glyphicon glyphicon-refresh"></span>
                         </button>
                     </div>
                 </div>
             </div>
         </options-menu>
+        <a ng-class="{active: gridOptions.showToolPanel}">
+            <i class="pull-right glyphicon glyphicon-edit" ng-click="toggleToolbox()" title="Modify Table Rows"></i>
+        </a>
     </div>
     <div class="clearfix"></div>
 </div>
 <div ag-grid="gridOptions" class="ag-dark results-table"></div>
-
