--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -25,6 +25,26 @@
         padding-top: 25px;
         margin-top: -25px;
     }
+
+    .header {
+        .header-container {
+            .edit-table-icon {
+                &.active {
+                    i {
+                        color: @accent-bright;
+                    }
+                }
+
+                i {
+                    line-height: 20px;
+                    padding-right: 10px;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: @main-text-color;
+                }
+            }
+        }
+    }
 }
 
 .visualization-widget {
