--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </options-menu>
-        <a ng-class="{active: gridOptions.showToolPanel}">
+        <a class="edit-table-icon" ng-class="{active: gridOptions.showToolPanel}">
             <i class="pull-right glyphicon glyphicon-edit" ng-click="toggleToolbox()" title="Modify Table Rows"></i>
         </a>
     </div>
