Fixing external links for countby

--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -55,4 +55,4 @@
     </div>
     <div class="clearfix"></div>
 </div>
-<div ag-grid="gridOptions" class="ag-dark results-table"></div>
+<div ag-grid="gridOptions" class="ag-fresh results-table"></div>
