--- a/app/css/directives/countBy.less
+++ b/app/css/directives/countBy.less
@@ -17,13 +17,51 @@
     margin: 0px;
     height: 100%;
     width: 100%;
+    overflow: hidden;
+
+    .record-count {
+        @media (min-width: 1024px) {
+            padding-left: 0px;
+        }
+
+        @media (min-width: 1500px) {
+            //This makes the autosizing work while taking into account the options menu.
+            padding-left: 20px;
+        }
+    }
+
+    .filter-container {
+        .header-item {
+            margin-top: 0px;
+        }
+    }
 
     .count-by-table {
         height: 100%;
 
-        //This makes the autosizing work while taking into account the options menu.
-        padding-top: 25px;
-        margin-top: -25px;
+        @media (min-width: 1024px) {
+            padding-top: 45px;
+            margin-top: -45px;
+        }
+
+        @media (min-width: 1500px) {
+            //This makes the autosizing work while taking into account the options menu.
+            padding-top: 25px;
+            margin-top: -25px;
+        }
+
+        &.filter-set {
+            @media (min-width: 1024px) {
+                padding-top: 80px;
+                margin-top: -80px;
+            }
+
+            @media (min-width: 1500px) {
+                //This makes the autosizing work while taking into account the options menu.
+                padding-top: 60px;
+                margin-top: -60px;
+            }
+        }
     }
 }
 
